manifests/istio/fault-injection/was-httpx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-httpx
spec: 
  type: ClusterIP
  selector:
    app: was
  ports:
  - name: http
    port: 9010
    targetPort: 9010
