manifests/istio/fault-injection/was-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: was-httpx
spec:
  host: was-httpx
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
